--- a/src/app.css
+++ b/src/app.css
@@ -1,7 +1,7 @@
 @font-face {
     font-family: "IBM Plex Sans";
     src: url("/fonts/IBM_Plex_Sans/IBMPlexSans-VariableFont_wdth,wght.ttf")
-        format("ttf");
+        format("truetype");
     font-weight: 400;
     font-style: normal;
     font-display: swap;
@@ -9,7 +9,7 @@
 
 @font-face {
     font-family: "IBM Plex Mono";
-    src: url("/fonts/IBM_Plex_Mono/IBMPlexMono-Regular.ttf") format("ttf");
+    src: url("/fonts/IBM_Plex_Mono/IBMPlexMono-Regular.ttf") format("truetype");
     font-weight: 400;
     font-style: normal;
     font-display: swap;
@@ -17,7 +17,8 @@
 
 @font-face {
     font-family: "Alegreya";
-    src: url("/fonts/Alegreya/Alegreya-VariableFont_wght.ttf") format("ttf");
+    src: url("/fonts/Alegreya/Alegreya-VariableFont_wght.ttf")
+        format("truetype");
     font-weight: 400;
     font-style: normal;
     font-display: swap;
@@ -26,7 +27,7 @@
 @font-face {
     font-family: "Alegreya";
     src: url("/fonts/Alegreya/Alegreya-Italic-VariableFont_wght.ttf")
-        format("ttf");
+        format("truetype");
     font-weight: 400;
     font-style: italic;
     font-display: swap;
